# cookiecutter-templates

./: README.md
default/: README.md  cookiecutter.json
default/{{ cookiecutter.project_name.lower().replace(' ', '_').replace('-', '_') }}/: README.md  pyproject.toml
default/{{ cookiecutter.project_name.lower().replace(' ', '_').replace('-', '_') }}/{{ cookiecutter.project_name.lower().replace(' ', '_').replace('-', '_') }}/: main.py
