[tool.poetry]
name = "{{ cookiecutter.project_name }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
version = "{{ cookiecutter.project_version }}"
description = "{{ cookiecutter.description }}"

[tool.poetry.dependencies]
python = "^{{ cookiecutter.min_python_version }}"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Linting
[tool.pylint.'message-control']
disable = ["missing-docstring"]

[tool.black]
line-length = 130
